# open-cc

./: Cargo.toml
docs/superpowers/plans/: 2026-04-02-claude-code-rust-refactor.md  2026-04-03-phase4-tools-lsp.md  (+2 more)
src/: error.rs  lib.rs  main.rs
src/agent/: context.rs  engine.rs  hooks.rs  lsp.rs  mod.rs  permission.rs
src/api/: auth.rs  client.rs  errors.rs  mod.rs
src/cli/: args.rs  bootstrap.rs  main.rs  mod.rs  session_list.rs  session_print.rs
src/commands/: mod.rs
src/config/: global.rs  mod.rs  project.rs
src/coordinator/: agent.rs  mod.rs
src/lsp/: client.rs  mod.rs  protocol.rs
src/mcp/: adapter.rs  client.rs  loader.rs  mod.rs  protocol.rs
src/plugins/: mod.rs  tool.rs
src/session/: compaction.rs  mod.rs  storage.rs  transcript.rs
src/tools/: agent_tool.rs  bash.rs  discover_skills.rs  enter_plan_mode.rs  enter_worktree.rs  exit_plan_mode.rs  exit_worktree.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  list_mcp_resources.rs  lsp.rs  mcp_auth.rs  mod.rs  monitor.rs  notebook_edit.rs  overflow_test.rs  powershell.rs  read_mcp_resource.rs  registry.rs  remote_trigger.rs  repl.rs  review_artifact.rs  schedule_cron.rs  send_message.rs  send_user_file.rs  skill.rs  sleep.rs  snip.rs  synthetic_output.rs  task_create.rs  task_get.rs  task_list.rs  task_output.rs  task_stop.rs  task_tool.rs  task_update.rs  team_create.rs  (+10 more)
src/tui/: app.rs  components.rs  event_loop.rs  input.rs  mod.rs  output.rs
src/types/: message.rs  mod.rs  permission.rs  session.rs  task.rs  tool.rs
tests/: coordinator.rs  integration.rs  plugins.rs
(+4 files in other folders)
