[package]
name = "open-cc"
version = "2.1.88"
edition = "2021"
description = "High-performance Rust implementation of Claude Code CLI"
license = "MIT"
repository = "https://github.com/killf/claude-code-rust"
authors = ["Anthropic"]

[[bin]]
name = "open-cc"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "process"] }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = "0.29"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
notify = "6.1"
walkdir = "2.4"
glob = "0.3"
regex = "1.10"
fuzzy-matcher = "0.3"
similar = "0.2"
futures = "0.3"
async-trait = "0.1"
keyring = "3"
shell-escape = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
dirs = "5.0"
os_type = "0.2"
semver = "1.0"
urlencoding = "2.1"
ctrlc = "3.0"

[profile.release]
strip = true
lto = true
